[gd_scene load_steps=11 format=3 uid="uid://b4h6t3182l23y"]

[ext_resource type="Texture2D" uid="uid://v1x0hckwdk5d" path="res://scenes/game/ui/il_794xN.4974376048_f3z0.jpg" id="1_midmi"]
[ext_resource type="Script" path="res://scenes/game/ui/main_menu_ui.gd" id="1_rym8g"]
[ext_resource type="AudioStream" uid="uid://bvm8jrg65fwe3" path="res://assets/sounds/Wormo's Theme.mp3" id="2_14ew1"]
[ext_resource type="Texture2D" uid="uid://c0e1xsjlnvhe3" path="res://assets/Ui/logo.png" id="2_g15ap"]
[ext_resource type="PackedScene" uid="uid://bqtt4wrgkvngo" path="res://scenes/_debug/debug_scene.tscn" id="3_8iarj"]
[ext_resource type="FontFile" uid="uid://cs8btg58u48y4" path="res://assets/Ui/fonts/Pixellari.ttf" id="4_efpax"]
[ext_resource type="Script" path="res://scenes/game/ui/AnimationComponent.gd" id="4_nicsl"]
[ext_resource type="Script" path="res://scenes/game/ui/AnimationComponentExit.gd" id="5_gdhd6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elxg8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1opos"]

[node name="Main Menu UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rym8g")
level_theme = ExtResource("2_14ew1")
next_level = ExtResource("3_8iarj")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_midmi")
stretch_mode = 4

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_g15ap")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1327.0
offset_top = 967.0
offset_right = 1733.0
offset_bottom = 974.0

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 1313.0
offset_top = 658.0
offset_right = 1741.0
offset_bottom = 752.0
theme_override_colors/font_hover_color = Color(0.950555, 0, 0.307878, 1)
theme_override_fonts/font = ExtResource("4_efpax")
theme_override_font_sizes/font_size = 85
theme_override_styles/focus = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1opos")
text = "Start Game"

[node name="AnimationComponent" type="Node" parent="Start Game"]
script = ExtResource("4_nicsl")

[node name="Controls" type="Button" parent="."]
layout_mode = 0
offset_left = 1384.0
offset_top = 756.0
offset_right = 1812.0
offset_bottom = 850.0
theme_override_colors/font_hover_color = Color(0.950555, 0, 0.307878, 1)
theme_override_fonts/font = ExtResource("4_efpax")
theme_override_font_sizes/font_size = 85
theme_override_styles/focus = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_elxg8")
text = "Controls"

[node name="AnimationComponent" type="Node" parent="Controls"]
script = ExtResource("4_nicsl")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1451.0
offset_top = 856.0
offset_right = 1879.0
offset_bottom = 950.0
theme_override_colors/font_hover_color = Color(0.950555, 0, 0.307878, 1)
theme_override_fonts/font = ExtResource("4_efpax")
theme_override_font_sizes/font_size = 85
theme_override_styles/focus = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_elxg8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_elxg8")
text = "Exit"

[node name="AnimationComponentExit" type="Node" parent="Exit"]
script = ExtResource("5_gdhd6")

[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
